Added bfs based cycle detection and bellman Ford algorithm